--- a/src/main/resources/templates/administrador-menu.html
+++ b/src/main/resources/templates/administrador-menu.html
@@ -11,7 +11,9 @@
             <li><a th:href="@{/administrador/alumnos}">Lista de Alumnos</a></li>
             <li><a th:href="@{/administrador/alumnos/nuevo}">Agregar Nuevo Alumno</a></li>
             <li><a th:href="@{/administrador/apoderados/nuevo}">Agregar Nuevo Apoderado</a></li>
-            <li><a th:href="@{/logout}">Cerrar sesión</a></li> <!-- Enlace para cerrar sesión -->
+            <li><a th:href="@{/administrador/apoderados}">Lista de Apoderados</a></li>
+            <li><a th:href="@{/administrador/asociar-alumno-apoderado}">Asociar Alumno a Apoderado</a></li>
+            <li><a th:href="@{/logout}">Cerrar sesión</a></li>
         </ul>
     </nav>
 </body>
