--- a/src/main/resources/templates/nuevo-alumno.html
+++ b/src/main/resources/templates/nuevo-alumno.html
@@ -27,6 +27,14 @@
             <input type="text" id="telefonoApoderado" th:field="*{telefonoApoderado}" />
         </div>
         <div>
+            <label for="direccion">Direccion:</label>
+            <input type="text" id="direccion" th:field="*{direccion}" />
+        </div>
+        <div>
+            <label for="curso">curso:</label>
+            <input type="text" id="curso" th:field="*{curso}" />
+        </div>
+        <div>
             <button type="submit">Guardar</button>
         </div>
     </form>
