--- a/src/main/resources/templates/apoderado-menu.html
+++ b/src/main/resources/templates/apoderado-menu.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <h1>Menú del Apoderado</h1>
-    <p>Contenido específico para apoderados.</p>
+    <ul>
+        <li><a th:href="@{/apoderado/alumnos}">Lista de Alumnos</a></li>
+    </ul>
 </body>
 </html>
