--- a/src/main/resources/templates/profesor-menu.html
+++ b/src/main/resources/templates/profesor-menu.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a th:href="@{/profesor/alumnos}">Lista de Alumnos</a></li>
             <li><a th:href="@{/profesor/alumnos/nuevo}">Agregar Nuevo Alumno</a></li>
-            <li><a th:href="@{/logout}">Cerrar sesión</a></li> <!-- Enlace para cerrar sesión -->
+            <li><a th:href="@{/logout}">Cerrar sesión</a></li>
         </ul>
     </nav>
 </body>
