--- a/src/main/resources/templates/ver-anotaciones.html
+++ b/src/main/resources/templates/ver-anotaciones.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 <h1>Anotaciones de <span th:text="${alumno.nombre}"></span> <span th:text="${alumno.apellidoPaterno}"></span></h1>
-<a th:href="@{/apoderado/menu}">Volver al Menú</a>
+<a th:if="${rol == 'administrador'}" th:href="@{/administrador/menu}">Volver al Menú</a>
+<a th:if="${rol == 'profesor'}" th:href="@{/profesor/menu}">Volver al Menú</a>
+<a th:if="${rol == 'apoderado'}" th:href="@{/apoderado/menu}">Volver al Menú</a>
 <ul>
     <li th:each="anotacion : ${anotaciones}">
         <span th:text="${anotacion}"></span>
