--- a/src/main/resources/templates/administrador-menu.html
+++ b/src/main/resources/templates/administrador-menu.html
@@ -13,6 +13,8 @@
             <li><a th:href="@{/administrador/apoderados/nuevo}">Agregar Nuevo Apoderado</a></li>
             <li><a th:href="@{/administrador/apoderados}">Lista de Apoderados</a></li>
             <li><a th:href="@{/administrador/asociar-alumno-apoderado}">Asociar Alumno a Apoderado</a></li>
+            <li><a th:href="@{/administrador/profesores}">Lista de Profesores</a></li>
+            <li><a th:href="@{/administrador/profesores/nuevo}">Agregar Nuevo Profesor</a></li>
             <li><a th:href="@{/logout}">Cerrar sesión</a></li>
         </ul>
     </nav>
