--- a/src/main/resources/templates/apoderado-menu.html
+++ b/src/main/resources/templates/apoderado-menu.html
@@ -7,6 +7,7 @@
     <h1>Menú del Apoderado</h1>
     <ul>
         <li><a th:href="@{/apoderado/alumnos}">Lista de Alumnos</a></li>
+        <li><a th:href="@{/logout}">Cerrar sesión</a></li>
     </ul>
 </body>
 </html>
