--- a/src/main/resources/templates/nuevo-apoderado.html
+++ b/src/main/resources/templates/nuevo-apoderado.html
@@ -25,7 +25,7 @@
         <div>
             <button type="submit">Guardar</button>
         </div>
-        
     </form>
+    <a th:href="|/administrador/menu|">Volver al menú</a>
 </body>
 </html>
