--- a/src/main/resources/templates/lista-profesores.html
+++ b/src/main/resources/templates/lista-profesores.html
@@ -19,6 +19,10 @@
         <td th:text="${profesor.apellido}"></td>
         <td th:text="${profesor.rut}"></td>
         <td th:text="${profesor.telefono}"></td>
+        <td>
+            <a th:href="@{/administrador/editar-profesor/{id}(id=${profesor.id})}">Editar</a>
+            <a th:href="@{/administrador/eliminar-profesor/{id}(id=${profesor.id})}">Eliminar</a>
+        </td>
     </tr>
 </table>
 <a th:href="@{/administrador/menu}">Volver al Menú</a>
