--- a/src/main/resources/templates/nuevo-profesor.html
+++ b/src/main/resources/templates/nuevo-profesor.html
@@ -20,6 +20,6 @@
     <br/>
     <button type="submit">Agregar Profesor</button>
 </form>
-<a th:href="|/${rol}/menu|">Volver al menú</a>
+<a th:href="|/administrador/menu|">Volver al menú</a>
 </body>
 </html>
