--- a/src/main/resources/templates/ver-anotaciones.html
+++ b/src/main/resources/templates/ver-anotaciones.html
@@ -10,7 +10,9 @@
 <a th:if="${rol == 'apoderado'}" th:href="@{/apoderado/menu}">Volver al Menú</a>
 <ul>
     <li th:each="anotacion : ${anotaciones}">
-        <span th:text="${anotacion}"></span>
+        <span th:text="${anotacion.texto}"></span>
+        <a th:href="@{|/${rol}/editar-anotacion/${anotacion.id}|}">Editar</a>
+        <a th:href="@{|/${rol}/eliminar-anotacion/${anotacion.id}|}">Eliminar</a>
     </li>
 </ul>
 </body>
