--- a/src/main/resources/templates/anotacion-alumno.html
+++ b/src/main/resources/templates/anotacion-alumno.html
@@ -5,12 +5,12 @@
 </head>
 <body>
 <h1>Agregar Anotación a [[${alumno.nombre}]] [[${alumno.apellidoPaterno}]]</h1>
-<form th:action="|/${rol}/agregar-anotacion|" method="post">
+<form th:action="@{|/${rol}/agregar-anotacion|}" method="post">
     <input type="hidden" name="id" th:value="${alumno.id}" />
     <label for="anotacion">Anotación:</label>
-    <input type="text" id="anotacion" name="anotacion" required/><br/>
+    <input type="text" id="anotacion" name="texto" required/><br/>
     <button type="submit">Agregar</button>
 </form>
-<a th:href="|/${rol}/menu|">Volver al Menú</a>
+<a th:href="@{|/${rol}/menu|}">Volver al Menú</a>
 </body>
 </html>
