--- a/src/main/resources/templates/nuevo-alumno.html
+++ b/src/main/resources/templates/nuevo-alumno.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Agregar Nuevo Alumno</h1>
-<form th:action="|/${rol}/alumnos/guardar|" th:object="${alumno}" method="post">
+<form th:action="@{/administrador/alumnos/guardar}" th:object="${alumno}" method="post">
     <div>
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" th:field="*{nombre}" />
@@ -38,6 +38,6 @@
         <button type="submit">Guardar</button>
     </div>
 </form>
-<a th:href="|/${rol}/menu|">Volver al menú</a>
+<a th:href="@{/administrador/menu}">Volver al menú</a>
 </body>
 </html>
