--- a/src/main/resources/templates/anotacion-alumno.html
+++ b/src/main/resources/templates/anotacion-alumno.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Agregar Anotación</title>
+    <meta charset="UTF-8">
+    <title>Formulario de Anotación</title>
 </head>
 <body>
 <h1>Agregar Registro de vida a [[${alumno.nombre}]] [[${alumno.apellidoPaterno}]]</h1>
-<form th:action="@{|/${rol}/agregar-anotacion|}" method="post">
+<form th:action="@{${rol == 'ROLE_ADMIN' ? '/administrador/agregar-anotacion' : (rol == 'ROLE_PROFESOR' ? '/profesor/agregar-anotacion' : '')}}" method="post">
     <input type="hidden" name="id" th:value="${alumno.id}" />
+    <input type="hidden" name="rol" th:value="${rol}" />
     <label for="anotacion">Anotación:</label>
-    <input type="text" id="anotacion" name="texto" required/><br/>
+    <input type="text" id="anotacion" name="texto" required /><br/>
     <button type="submit">Agregar</button>
 </form>
-<a th:href="@{|/${rol}/menu|}">Volver al Menú</a>
 </body>
 </html>
