--- a/src/main/resources/templates/editar-anotacion.html
+++ b/src/main/resources/templates/editar-anotacion.html
@@ -5,12 +5,11 @@
 </head>
 <body>
 <h1>Editar Anotación</h1>
-<form th:action="@{/profesor/editar-anotacion}" method="post">
+<form th:action="@{${rol == 'ROLE_ADMIN' ? '/administrador/editar-anotacion' : (rol == 'ROLE_PROFESOR' ? '/profesor/editar-anotacion' : '')}}" method="post">
     <input type="hidden" name="id" th:value="${anotacion.id}" />
     <label for="texto">Anotación:</label>
     <input type="text" id="texto" name="texto" th:value="${anotacion.texto}" required/><br/>
     <button type="submit">Actualizar</button>
 </form>
-<a th:href="@{/profesor/alumnos}">Volver</a>
 </body>
 </html>
